syntax = "proto3";
option csharp_namespace = "User";
option go_package = "ShortCx/user";
package protos;
import "apiservice.proto";

service UserService {
    rpc CreateUser (CreateUserRequest) returns (InternalCreateUserResponse) {}
}

message InternalCreateUserResponse {
    bool success = 1;
}